[gd_scene load_steps=3 format=3 uid="uid://de7em1abtfn2t"]

[ext_resource type="Script" path="res://UI/game_over-layer.gd" id="1_yoalm"]
[ext_resource type="FontFile" uid="uid://b8kfdkjvb5nmo" path="res://fonts/flappyfont_48.tres" id="2_bb5ue"]

[node name="GameOverLayer" type="CanvasLayer"]
script = ExtResource("1_yoalm")

[node name="GameOverMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="GameOverMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -166.0
offset_top = -306.0
offset_right = 164.0
offset_bottom = -129.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="ScoreLabel" type="Label" parent="GameOverMenu/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("2_bb5ue")
text = "SCORE:0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HighScoreLabel" type="Label" parent="GameOverMenu/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("2_bb5ue")
text = "BEST: 0
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RestartButton" type="Button" parent="GameOverMenu/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_bb5ue")
text = "RESTART"

[connection signal="pressed" from="GameOverMenu/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
